# rpc

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  updates.config.js
.github/: dependabot.yml
go/: README.md  channel.go  chunking.go  chunking_boundary_test.go  chunking_test.go  client.go  client_callback.go  client_proxy.go  client_pull_callback.go  client_stream.go  codec.go  codec_message.go  codec_message_test.go  codec_roundtrip_test.go  codec_test.go  go.mod  (+16 more)
python/: README.md  profile_test.py  pyproject.toml  run_example.py
python/camera_ui_rpc/: __init__.py  channel.py  chunking.py  client.py  codec.py  decorators.py  errors.py  executor.py  handler.py  service.py  types.py  utils.py
python/examples/: all_in_one_performance.py  auto_chunking.py  callback_subscription.py  channel_communication.py  channel_native_request.py  concurrent_ops.py  cross_language.py  generator_types.py  isolated_connections.py  isolated_handler.py  isolated_service.py  isolated_service_server.py  large_data_transfer.py  multi_service.py  native_request_reply.py  perf_hotpath.py  plain_object_properties.py  private_channel.py  private_channel_2.py  property_decorator.py  pull_callback_backpressure.py  pull_callback_basic.py  pull_callback_cancellation.py  pull_callback_cross.py  pull_callback_mechanism.py  pull_vs_push_generators.py  reconfigure.py  service.py  service_chunking.py  service_pull_vs_push_generators.py  unified_streaming.py
python/scripts/: build.py
python/tests/: test_chunking.py  test_codec.py  test_errors.py  test_mux.py  test_utils.py
(+106 files in other folders)
